--- a/style1.css
+++ b/style1.css
@@ -7,7 +7,7 @@
 body {
     height: 100vh;
     font-family: 'Space Grotesk', sans-serif;
-    background: rgba(246, 244, 244, 0.912);
+    background: rgb(251, 250, 250);
     color: whitesmoke;
     display: flex;
     justify-content: center;
@@ -19,16 +19,25 @@ body {
     --Light-grayish-violet: hsl(270, 3%, 87%);
     --Dark-grayish-violet: hsl(279, 6%, 55%);
     --Very-dark-violet: hsl(278, 68%, 11%);
-    --Linear-gradient: (to right, ): hsl(249, 99%, 64%) to hsl(278, 94%, 30%); /*??????*/
-    --Red: (input errors): hsl(0, 100%, 66%); /*????*/
+    --Linear-gradient: (to right, hsl(249, 99%, 64%) to hsl(278, 94%, 30%)); /*??????*/
+    --Red: (to top, hsl(0, 100%, 66%)); /*????*/
 }
 
 .container {
-    height: 90vh;
-    width: 90%;
+    height: 95vh;
+    width: 95%;
     background: white;
+    display: grid;
+    grid-template-columns: 30% 70%;
     border-radius: 10px;
-    background-color: white;
 }
 
-.left
+.left {
+    height: 100%;
+    background-image: url(./images/bg-main-desktop.png);
+}
+
+.front {
+    background-image: url(./images/bg-card-front.png);
+    margin: 50%;
+}
